--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^2.1.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-lottie": "^1.2.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
